# python-homey-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  main.py  pyproject.toml  start-server.sh
.github/workflows/: docker.yml
homey_mcp/: __init__.py  config.py  exceptions.py  mcp_instance.py  test_config.py
homey_mcp/client/: __init__.py  manager.py
homey_mcp/tools/: __init__.py  devices.py  flows.py  health.py  prompts.py  resources.py  system.py  zones.py
homey_mcp/utils/: __init__.py  logging.py  pagination.py  retry.py  tool_config.py
tests/: __init__.py  test_devices.py  test_flows.py  test_optional_tools.py  test_prompts.py  test_registration.py  test_resources.py  test_trigger_flow.py
