[project]
name = "python-homey-mcp"
version = "0.1.0"
description = "HomeyPro MCP Server - A Model Context Protocol server for HomeyPro home automation systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.10.2", "python-homey"]

[tool.uv.sources]
python-homey = { git = "https://github.com/pigmej/python-homey.git" }
