[project]
name = "python-homey-mcp"
version = "0.1.0"
description = "HomeyPro MCP Server - A Model Context Protocol server for HomeyPro home automation systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.2", 
    "python-homey",
]

[project.scripts]
homey-mcp = "main:mcp"

[tool.uv.sources]
python-homey = { git = "https://github.com/pigmej/python-homey.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
