[project]
name = "python-homey-mcp"
version = "0.1.0"
description = "HomeyPro MCP Server - A Model Context Protocol server for HomeyPro home automation systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.2",
    "python-homey",
    "typing-extensions>=4.14.1",
]

[tool.setuptools.packages.find]
include = ["homey_mcp*"]

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
homey-mcp = "main:mcp"

[tool.uv.sources]
python-homey = { git = "https://github.com/pigmej/python-homey.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "asyncio: marks tests as async (pytest-asyncio)",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]
minversion = "6.0"
